worked on the summary

--- a/index.html
+++ b/index.html
@@ -33,15 +33,42 @@
         </div>
       </section>
       <section class="summary">
-        <h2>Summary</h2>
-        <div class="summary__details">
-          <p>Reaction <span>80/100</span></p>
-          <p>Memory</p>
-          <p>Verbal</p>
-          <p>Visual</p>
-        </div>
+        <h2 class="summary__title">Summary</h2>
+        <div class="scores">
+          <div class="reaction score">
+            <div class="details">
+              <img src="./assets/images/icon-reaction.svg" alt="" />
+              <p class="reaction_paragraph">Reaction</p>
+            </div>
+            <p class="score_paragraph">80 / <span>100</spa></span>
+          </div>
 
+          <div class="memory score">
+            <div class="details">
+              <img src="./assets/images/icon-memory.svg" alt="" />
+              <p class="memory_paragraph">Memory</p>
+            </div>
+            <p class="score_paragraph">92 / <span>100</span></p>
+          </div>
+
+          <div class="verbal score">
+            <div class="details">
+              <img src="./assets/images/icon-verbal.svg" alt="" />
+              <p class="verbal_paragraph">Verbal</p>
+            </div>
+            <p class="score_paragraph">61 / <span>100</span></p>
+          </div>
+
+          <div class="visual score">
+            <div class="details">
+              <img src="./assets/images/icon-visual.svg" alt="" />
+              <p class="visual_paragraph">Visual</p>
+            </div>
+            <p class="score_paragraph">72 / <span>100</span></p>
+          </div>
+        </div>
         <button class="Continue-btn">Continue</button>
+
       </section>
     </main>
   </body>
